--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -87,11 +87,11 @@
     <Compile Include="Class\csEquipo.cs" />
     <Compile Include="Class\csJugador.cs" />
     <Compile Include="Class\csUsuario.cs" />
-    <Compile Include="Form\AggEquipo.cs">
+    <Compile Include="Form\AggEditEquipo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\AggEquipo.Designer.cs">
-      <DependentUpon>AggEquipo.cs</DependentUpon>
+    <Compile Include="Form\AggEditEquipo.Designer.cs">
+      <DependentUpon>AggEditEquipo.cs</DependentUpon>
     </Compile>
     <Compile Include="Form\AggJugadores.cs">
       <SubType>Form</SubType>
@@ -207,8 +207,8 @@
     <EmbeddedResource Include="Form\Estadio.resx">
       <DependentUpon>Estadio.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\AggEquipo.resx">
-      <DependentUpon>AggEquipo.cs</DependentUpon>
+    <EmbeddedResource Include="Form\AggEditEquipo.resx">
+      <DependentUpon>AggEditEquipo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\AggJugadores.resx">
       <DependentUpon>AggJugadores.cs</DependentUpon>
