break porque juega el idolo

--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -67,7 +67,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="csAuditorias.cs" />
+    <Compile Include="Class\csAuditorias.cs" />
+    <Compile Include="Class\csValidaciones.cs" />
     <Compile Include="Form\AgregarJugadorEquipo.cs">
       <SubType>Form</SubType>
     </Compile>
