--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -224,6 +224,12 @@
     <Compile Include="Form\Patrocinadores.Designer.cs">
       <DependentUpon>Patrocinadores.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form\IncripcionEquipo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\IncripcionEquipo.Designer.cs">
+      <DependentUpon>IncripcionEquipo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Form\Torneo.cs">
@@ -288,6 +294,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Goles.resx">
       <DependentUpon>Goles.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\IncripcionEquipo.resx">
+      <DependentUpon>IncripcionEquipo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Jugador.resx">
       <DependentUpon>Jugador.cs</DependentUpon>
