--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="Class\csAuditorias.cs" />
     <Compile Include="Class\csValidaciones.cs" />
+    <Compile Include="csArbitro.cs" />
     <Compile Include="Form\AgregarJugadorEquipo.cs">
       <SubType>Form</SubType>
     </Compile>
