--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -69,7 +69,8 @@
   <ItemGroup>
     <Compile Include="Class\csAuditorias.cs" />
     <Compile Include="Class\csValidaciones.cs" />
-    <Compile Include="csArbitro.cs" />
+    <Compile Include="Class\csArbitro.cs" />
+    <Compile Include="csOrganizador.cs" />
     <Compile Include="Form\AgregarJugadorEquipo.cs">
       <SubType>Form</SubType>
     </Compile>
