--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -246,6 +246,12 @@
     <Compile Include="Form\IncripcionEquipo.Designer.cs">
       <DependentUpon>IncripcionEquipo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form\GestionInscripcion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\GestionInscripcion.Designer.cs">
+      <DependentUpon>GestionInscripcion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Form\Torneo.cs">
@@ -307,6 +313,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\GestionarPartidos.resx">
       <DependentUpon>GestionarPartidos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\GestionInscripcion.resx">
+      <DependentUpon>GestionInscripcion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\GestionUsuario.resx">
       <DependentUpon>GestionUsuario.cs</DependentUpon>
