--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -252,6 +252,12 @@
     <Compile Include="Form\GestionInscripcion.Designer.cs">
       <DependentUpon>GestionInscripcion.cs</DependentUpon>
     </Compile>
+    <Compile Include="PagoArbitro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PagoArbitro.Designer.cs">
+      <DependentUpon>PagoArbitro.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Form\Torneo.cs">
@@ -346,6 +352,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Torneo.resx">
       <DependentUpon>Torneo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PagoArbitro.resx">
+      <DependentUpon>PagoArbitro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
