--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -252,6 +252,12 @@
     <Compile Include="Form\AgregarEditar\PagoArbitro.Designer.cs">
       <DependentUpon>PagoArbitro.cs</DependentUpon>
     </Compile>
+    <Compile Include="IngresarCorreoRecuperacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IngresarCorreoRecuperacion.Designer.cs">
+      <DependentUpon>IngresarCorreoRecuperacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Form\Principales\Torneo.cs">
@@ -349,6 +355,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Principales\Torneo.resx">
       <DependentUpon>Torneo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IngresarCorreoRecuperacion.resx">
+      <DependentUpon>IngresarCorreoRecuperacion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
