--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -473,6 +473,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Form\Reportes\" />
     <Folder Include="Imagenes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
