--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -319,6 +319,18 @@
     <Compile Include="Form\Principales\GestionFinanciera.Designer.cs">
       <DependentUpon>GestionFinanciera.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form\Reportes\frmEstatsGenerales.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\Reportes\frmEstatsGenerales.Designer.cs">
+      <DependentUpon>frmEstatsGenerales.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Reportes\frmEquiposEstadisticas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\Reportes\frmEquiposEstadisticas.Designer.cs">
+      <DependentUpon>frmEquiposEstadisticas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Form\Principales\Torneo.cs">
@@ -334,6 +346,15 @@
     </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <EmbeddedResource Include="Form\Reportes\frmEquiposEstadisticas.resx">
+      <DependentUpon>frmEquiposEstadisticas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Reportes\frmEstatsGenerales.resx">
+      <DependentUpon>frmEstatsGenerales.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Reportes\rptDatos.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form\AgregarEditar\AggEditArbitro.resx">
       <DependentUpon>AggEditArbitro.cs</DependentUpon>
     </EmbeddedResource>
@@ -435,6 +456,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Reportes\frmEstadisticasGol.resx">
       <DependentUpon>frmEstadisticasGol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Reportes\rptEquipos.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
