--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -340,6 +340,15 @@
     </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <Compile Include="Form\Principales\TablaDePosiciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\Principales\TablaDePosiciones.Designer.cs">
+      <DependentUpon>TablaDePosiciones.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Form\Principales\TablaDePosiciones.resx">
+      <DependentUpon>TablaDePosiciones.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form\Reportes\frmEquiposEstadisticas.resx">
       <DependentUpon>frmEquiposEstadisticas.cs</DependentUpon>
     </EmbeddedResource>
