--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -331,6 +331,12 @@
     <Compile Include="Form\Reportes\frmEquiposEstadisticas.Designer.cs">
       <DependentUpon>frmEquiposEstadisticas.cs</DependentUpon>
     </Compile>
+    <Compile Include="PagoPatrocinador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PagoPatrocinador.Designer.cs">
+      <DependentUpon>PagoPatrocinador.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Form\Principales\Torneo.cs">
@@ -462,6 +468,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Reportes\frmEstadisticasGol.resx">
       <DependentUpon>frmEstadisticasGol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PagoPatrocinador.resx">
+      <DependentUpon>PagoPatrocinador.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
